[package]
name = "interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
thirtyfour = "0.30.0"
image = "0.24.3"
reqwest = { version = "0.11", features = ["blocking"] }
opencv = "0.66.0"
