[package]
name = "interface_tf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tensorflow = { version = "0.19.1", features = ["eager"] }
tract-tensorflow = "0.6.3"
thirtyfour_sync = { version = "0.27.1" }
image = "0.24.3"
imageproc = "~0.23.0"
ndarray = "0.15.6"
reqwest = { version = "0.11", features = ["blocking"] }
opencv = "0.66.0"
