[package]
name = "interface_tf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tensorflow = { version = "0.19.1", features = ["eager"] }
thirtyfour_sync = { version = "0.27.1" }
itertools = "0.10.3"
image = "0.24.3"
imageproc = "0.23.0"
show-image = {version = "0.12.3"}
rusttype = "0.9.2"
# ndarray = "0.15.6"
reqwest = { version = "0.11", features = ["blocking"] }
# opencv = "0.66.0"
rand = "0.8.5"
rand_distr = "0.4.3"
